# rust-gui-token-tracker

./: .gitignore  API_SETUP_GUIDE.md  Cargo.toml  README.md  build.ps1  env.example  package.json
src/: index.html  script.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
web-version/: README.md  index.html  package.json  script.js  styles.css  test.html  vercel.json
web-version/api/: get-wallet-data.js
