[package]
name = "rust-gui-token-tracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "rust_gui_token_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
ethers-signers = "2.0"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"] 